# Multi-Agent-Cooperative-System

./: .env.example  .gitignore  CNAME  README.md  docker-compose.yml  index.html  pyproject.toml
backend/app/: main.py
backend/app/api/: agents.py  collaboration.py  monitoring.py  routes.py  tasks.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py  communication_service.py  task_service.py
deploy/: Dockerfile.backend
docs/: API_EXAMPLES.md  DELIVERY_CHECKLIST.md  QUICKSTART.md
scripts/: start.sh
